user help changes

--- a/app/views/user_help/index.html.erb
+++ b/app/views/user_help/index.html.erb
@@ -65,10 +65,10 @@
     	$(this).closest('.message').transition('fade');
     	window.history.pushState({}, document.title, "/user_help" );
   })
-	setTimeout(function () {
-	    document.getElementById('message').style.display='none';
-	    window.history.pushState({}, document.title, "/user_help" );
-    }, 10000);
+	// setTimeout(function () {
+	//     document.getElementById('message').style.display='none';
+	//     window.history.pushState({}, document.title, "/user_help" );
+ //    }, 10000);
 
 
 CampusConnect.College.Validation.userHelp();
