--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,25 +1,37 @@
-<h2>Change your password</h2>
+<br/>
+<br/>
+<br/>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages1! %>
-  <%= f.hidden_field :reset_password_token %>
+<div class="ui center aligned grid">
+  <div class="six wide column">
+    <h2 class="ui image header">
+      <div class="content">
+        <h2>Change your password </h2>
+      </div>
+    </h2>
+    
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put,:class=>"ui form" }) do |f| %>
+      <%= devise_error_messages1! %>
+      <%= f.hidden_field :reset_password_token %>
+      <div class="ui   segment">
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+      <div class="field">
+        <%= f.label :password, "New password" %>
+        <% if @minimum_password_length %>
+          <!-- <em>(<%= @minimum_password_length %> characters minimum)</em> -->
+        <% end %>
+        <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :password_confirmation, "Confirm new password" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      </div>
+      <div class="actions">
+        <%= f.submit "Change my password", :class=>"ui fluid large teal submit button" %>
+      </div>
+    </div>
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+    
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
