company detail js bug fix

--- a/app/views/dashboard/_company_details_handlebar.html.erb
+++ b/app/views/dashboard/_company_details_handlebar.html.erb
@@ -84,7 +84,7 @@
                         </center>
                         <form id="InterestSendForm">
                             <input type="hidden" name="campus_id" value="<%=@campus_id%>">
-                            <input type="hidden" name="opening_id" value="{{@op_id}}">
+                            <input type="hidden" name="opening_id" value="<%=@op_id%>">
                         </form>
                     {{/if}}
                     </div>
