--- a/app/views/dashboard/company_details.html.erb
+++ b/app/views/dashboard/company_details.html.erb
@@ -31,3 +31,6 @@ word-spacing: 2px;
 <%= render :partial=>"sidebar" %>
 <div id="company_detail_container">
 </div>
+<script>
+    CampusConnect.Dashboard.compileCompanyDetailTemplate();
+</script>
