--- a/app/views/dashboard/_right_nav.html.erb
+++ b/app/views/dashboard/_right_nav.html.erb
@@ -17,6 +17,16 @@
         <div class="results"></div>
       </div>
       <a href="/campus_drives/index" class="item">Create Drive</a>
+      <div  style="max-width: 150px">
+        <div class="ui icon top right dropdown">
+          <p id="notification-count" style="position:  absolute;top: 20px;left: 8px;font-size: 15px;display:  block;color:  white;background-color: green;padding: 0px 5px 0px 5px;border-radius:  5px;">
+
+          </p>
+          <i class="bell icon notification-icon" style="color:gold;font-size: 30px;margin: 35px 0px 20px 0px;cursor: pointer"></i>
+          <div class="menu" id="notification-container">
+          </div>
+        </div>
+      </div>
       <div class="ui right dropdown mini item">
         <label href="#" class="item"><%=current_user.firstname%></label>
         <i class="dropdown icon"></i>
