--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -9,6 +9,7 @@
         <%= javascript_include_tag 'handlebars-v4.0.5.js' %>
         <%= javascript_include_tag 'campus_connect/utilities.js' %>
         <%= javascript_include_tag 'campus_connect/dashboard.js' %>
+        <%= javascript_include_tag 'campus_connect/notifications.js' %>
         <%= javascript_include_tag 'campus_connect/connection_dashboard.js' %>
         <%= javascript_include_tag "campus_connect/college/validation.js" %>
     </head>
@@ -21,5 +22,6 @@
         <%= render :partial=>"dashboard/cards_handlebar" %>
         <%= render :partial=>"connections_dashboard/cards_handlebar" %>
         <%= render :partial=>"dashboard/company_details_handlebar" %>
+        <%= render :partial => "dashboard/notification_list_handlebar"%>
     </body>
 </html>
