--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -18,6 +18,7 @@
         <%= render 'layouts/header' %>
         <%=yield%>
         <%= render :partial=>"campus_drives/departments_handlebar" %>
+        <%= render :partial=>"campus_drives/cities_handlebar" %>
         <%= render :partial=>"dashboard/cities_department_handlebar" %>
         <%= render :partial=>"dashboard/cards_handlebar" %>
         <%= render :partial=>"connections_dashboard/cards_handlebar" %>
